--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <h1 style="color:#5e9ca0;">Zhiyang Yuan</h1>
-Zhiyang Yuan
+<p><font face="Snell Roundhand" size="7" color="#00ff00">Zhiyang Yuan</font></p>
+
