--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1 style="color:#5e9ca0;">Zhiyang Yuan</h1>
-<p><font face="Snell Roundhand" size="7" color="#00ff00">Zhiyang Yuan</font></p>
+<p><font face="Snell Roundhand Regular" size="7" color="#00ff00">Zhiyang Yuan</font></p>
 
