--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
-<h1 style="color:#5e9ca0;">Zhiyang Yuan</h1>
-<p><font face="Candara" size="7" color="#00ff00">Zhiyang Yuan</font></p>
+<style>
 
+</style>
+<body>
+<!-- <h1 style="color:#5e9ca0;size:10">Zhiyang Yuan</h1> -->
+<p><center><font size="7" color="#5e9ca0">Zhiyang Yuan</font></center></p>
+
+</body>
