--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 <body>
 <!-- <h1 style="color:#5e9ca0;size:10">Zhiyang Yuan</h1> -->
 <p><center><font size="7" color="#5e9ca0">Zhiyang Yuan</font></center></p>
-<p><center>Hangzhou High School 14'&ensp;|&ensp;PKU Physics 18'&ensp;|&ensp;Princeton EE</center></p>
+<!-- <p><center>Hangzhou High School 14'&ensp;|&ensp;PKU Physics 18'&ensp;|&ensp;Princeton EE</center></p> -->
+<p><center>Princeton ECE</center></p>
 </body>
